# qimeng-scut

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  content.rs  input.rs  lib.rs  main.rs  manual.rs  ui.rs
tests/: manual_repo.rs
tests/fixtures/manual_repo/docs/: README.md  get-started.md
tests/fixtures/manual_repo/docs/health/: medical.md
tests/fixtures/manual_repo/docs/health/nested/: alive.md
tests/fixtures/manual_repo/docs/others/: app.md
