[package]
name = "qimeng-scut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
figlet-rs = "1.0.0"
pulldown-cmark = "0.13"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
textwrap = "0.16"
unicode-width = "0.2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
